# sql-script-parser

./: Cargo.toml  README.md
src/: lib.rs
tests/: custom.sql  demo.sql
