[package]
name = "sql-script-parser"
version = "0.1.1"
authors = ["Alexander Korolev <kilork@yandex.ru>"]
edition = "2018"
categories = ["parser-implementations"]
description = """
sql-script-parser iterates over SQL statements in SQL script.
"""
homepage = "https://github.com/kilork/sql-script-parser"
keywords = ["sql", "parser", "tokenizer", "mysql"]
license = "Unlicense OR MIT"
readme = "README.md"
repository = "https://github.com/kilork/sql-script-parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
